5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1594_2043.log
== TEST (2019-03-26 12:42:47) 
-- CODE:
print round(0.2,2)
-- ERROR:
File "XXXX", line 1
    print round(0.2,2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:43:03) 
-- CODE:
print round(4,2)
-- ERROR:
File "XXXX", line 1
    print round(4,2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:43:23) 
-- CODE:
print = round(4,2)
-- ERROR:
File "XXXX", line 1
    print round(4,2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:44:06) 
-- CODE:
print(round(0.2))
-- ERROR:
File "XXXX", line 1
    print round(4,2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:44:12) 
-- CODE:
print(round(0.2))
-- EXECUTION TIME:
0.164128
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:45:00) 
-- CODE:
print(round(1,2,3,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(1,2,3,4))
TypeError: round() takes at most 2 arguments (4 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:45:27) 
-- CODE:
print(round(2.4))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:34:39) 
-- CODE:
x=float(input("nota do aluno samuel: "))
y=float(input("nota do aluno ze lucas: "))
z=float(input("nota do aluno fabricio: "))
w=float(input("nota do aluno ewerton: "))

N=(1,2,3,4)
print(round(N, 2)
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:34:51) 
-- CODE:
x=float(input("nota do aluno samuel: "))
y=float(input("nota do aluno ze lucas: "))
z=float(input("nota do aluno fabricio: "))
w=float(input("nota do aluno ewerton: "))

N=(1,2,3,4)
print(round(N, 2)
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:35:20) 
-- CODE:
x=float(input("nota do aluno samuel: "))
y=float(input("nota do aluno ze lucas: "))
z=float(input("nota do aluno fabricio: "))
w=float(input("nota do aluno ewerton: "))

X=(1,2,3,4)
print(round(X, 2)
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:35:21) 
-- CODE:
x=float(input("nota do aluno samuel: "))
y=float(input("nota do aluno ze lucas: "))
z=float(input("nota do aluno fabricio: "))
w=float(input("nota do aluno ewerton: "))

X=(1,2,3,4)
print(round(X, 2)
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:35:37) 
-- CODE:
x=float(input("nota do aluno samuel: "))
y=float(input("nota do aluno ze lucas: "))
z=float(input("nota do aluno fabricio: "))
w=float(input("nota do aluno ewerton: "))

X=(1,2,3,4)

print(round(X, 2)
-- ERROR:
File "XXXX", line 9
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:37:55) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

X=(1,2,3,4)

print(round(X,2)
-- ERROR:
File "XXXX", line 9
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:38:19) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(1,2,3,4)

print(round(r,2)
-- ERROR:
File "XXXX", line 9
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:40:53) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(x/1 , y/2 , z/3 , w/4 )

print(round(r,2)
-- ERROR:
File "XXXX", line 9
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:40:55) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(x/1 , y/2 , z/3 , w/4 )

print(round(r,2)
-- EXECUTION TIME:
0.145832
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 9
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:41:28) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(x/1 , y/2 , z/3 , w/4 )
print(r , 2 )
-- OUTPUT:
(8.0, 4.25, 2.3333333333333335, 2.25) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:42:07) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(x/1 , y/2 , z/3 , w/4 )
print(r , 2 )
-- EXECUTION TIME:
0.134725
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
(8.0, 4.25, 2.3333333333333335, 2.25) 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
(7.0, 3.5, 2.3333333333333335, 1.75) 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
(5.75, 3.45, 2.65, 2.2475) 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:42:15) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(x/1 , y/2 , z/3 , w/4 )
print(r , 2 )
-- OUTPUT:
(8.0, 4.25, 2.3333333333333335, 2.25) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:42:46) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(1,2,3,4,)
print(r , 2 )
-- OUTPUT:
(1, 2, 3, 4) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:43:32) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=
print(r , 2 )
-- EXECUTION TIME:
0.140222
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 6
    r=
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:44:57) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(x**1,y**2,z**3,w**4)
print(r , 2 )
-- OUTPUT:
(8.0, 72.25, 343.0, 6561.0) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:46:02) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(x**1,y**2,z**3,w**4)
print(r , 2 )
-- EXECUTION TIME:
0.185993
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
(8.0, 72.25, 343.0, 6561.0) 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
(7.0, 49.0, 343.0, 2401.0) 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
(5.75, 47.61000000000001, 502.459875, 6531.888564010001) 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:46:13) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(x*1,y*2,z*3,w*4)
print(r , 2 )
-- OUTPUT:
(8.0, 17.0, 21.0, 36.0) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:47:02) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(x*1,y*2,z*3,w*4)//2
print(r , 2 )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r=(x*1,y*2,z*3,w*4)//2
TypeError: unsupported operand type(s) for //: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:25:12) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(y*1,y*2,z*3,w*4)
print(r , 2 )
-- OUTPUT:
(8.5, 17.0, 21.0, 36.0) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:25:18) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(y*1,y*2,z*3,w*4)
print(r , 2 )
-- OUTPUT:
(8.5, 17.0, 21.0, 36.0) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:18:23) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(y*1,y*2,z*3,w*4)
print(r , 2 )
-- OUTPUT:
(8.5, 17.0, 21.0, 36.0) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:18:54) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(y*1,y*2,z*3,w*4)
print(r , 2 )
-- OUTPUT:
(8.5, 17.0, 21.0, 36.0) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:19:20) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(y*1,y*2,z*3,w*4)
print(r , 2 )
-- OUTPUT:
(8.5, 17.0, 21.0, 36.0) 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:10:19) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

r=(y1*1 + y2*2 + z3*3 + w4*4)
print(r , 2 )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r=(y1*1 + y2*2 + z3*3 + w4*4)
NameError: name 'y1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:11:09) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

media=(y1*1 + y2*2 + z3*3 + w4*4)/10
print(r , 2 )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media=(y1*1 + y2*2 + z3*3 + w4*4)/10
NameError: name 'y1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:11:42) 
-- CODE:
x=float(input("avaliacao do aluno samuel: "))
y=float(input("avaliacao do aluno ze lucas: "))
z=float(input("avaliacao do aluno fabricio: "))
w=float(input("avaliacao do aluno ewerton: "))

media=(x1*1 + y2*2 + z3*3 + w4*4)/10
print(r , 2 )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media=(x1*1 + y2*2 + z3*3 + w4*4)/10
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
